--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
     <header>
       <div class="container">
         <h1>Ccgnu-os-core</h1>
-        <h2>The CCGnu operating system core.</h2>
-
         <section id="downloads">
           <a href="https://github.com/supertassu/ccgnu-os-core/zipball/master" class="btn">Download as .zip</a>
           <a href="https://github.com/supertassu/ccgnu-os-core/tarball/master" class="btn">Download as .tar.gz</a>
@@ -29,7 +27,7 @@
     <div class="container">
       <section id="main_content">
         <h1>
-<a id="ccgnu-os-core" class="anchor" href="#ccgnu-os-core" aria-hidden="true"><span class="octicon octicon-link"></span></a>ccgnu-os-core</h1>
+<a id="ccgnu-os-core" class="anchor" href="#ccgnu-os-core" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to ccgnu-os-core</h1>
 
 <p>The CCGnu operating system core.</p>
 
